/**
* Copyright 2024 Centreon
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*     http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
* For more information : contact@centreon.com
*/

syntax = "proto3";

package com.centreon.common;

/**
 * @brief Type of the peer. Used in Welcome message, also in the Broker gRPC
 * service.
 *
 */
enum PeerType {
  UNKNOWN = 0;
  BROKER = 1;
  ENGINE = 2;
  MAP = 3;
}
